@@ -85,3 +85,6 @@ graph.viewTableInObjectTree=View table in Object tree
 
 graph.btnCreateNewGraph=Create new graph
 graph.btnCancel=Cancel
+
+graph.copyTableName=Copy table name
+graph.copyQualifiedTableName= Copy qualified table name 
